hphp/hack/test/typecheck/test_consts8.php.exp
File "test_consts8.php", line 6, characters 12-20:
Invalid return type (Typing[4110])
File "test_consts8.php", line 5, characters 24-29:
This is a string
File "test_consts8.php", line 4, characters 18-20:
It is incompatible with an int
File "test_consts8.php", line 4, characters 22-22:
Considering the constraint on 'C1::X'
